@startuml ERDiagram
hide circle
skinparam linetype ortho

entity "users" as users {
  * id : integer <<PK>>
  --
  email : varchar
  password_hash : varchar
  nickname : varchar
  created_at : datetime
}

entity "chats" as chats {
  * id : integer <<PK>>
  title : varchar
  is_group : bool
}

entity "chats_users" as cu {
  * chat_id <<FK>>
  * user_id <<FK>>
}

entity "messages" as msgs {
  * id : integer <<PK>>
  chat_id <<FK>>
  author_id <<FK>>
  body : text
  created_at : datetime
  edited_at : datetime
}

entity "reactions" as reacts {
  * id : integer <<PK>>
  message_id <<FK>>
  user_id <<FK>>
  emoji : varchar
}

entity "tasks" as tasks {
  * id : integer <<PK>>
  owner_id <<FK>>
  title : varchar
  due_date : date
  priority : enum
  is_done : bool
}

entity "call_logs" as calls {
  * id : integer <<PK>>
  chat_id <<FK>>
  started_at : datetime
  ended_at : datetime
  duration_sec : int
}

entity "software" as sw {
  * id : integer <<PK>>
  name : varchar
  version : varchar
  repo_url : varchar
}

entity "friendships" as fr {
  * requester_id <<FK>>
  * addressee_id <<FK>>
  status : enum
}

' ------------ Relations --------------
users ||--o{ cu : participates
chats ||--o{ cu
chats ||--o{ msgs
users ||--o{ msgs
msgs ||--o{ reacts
users ||--o{ reacts
users ||--o{ tasks
chats ||--o{ calls
users ||--o{ calls
users ||--o{ fr : friends
@enduml
